fix card flicker on mobile

--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -7,7 +7,7 @@
     align-items: flex-start;
     justify-content: space-between;
     padding: 8px 32px 8px 32px;
-    margin: 8px;
+    margin: 8px 0 8px;
     display: flex;
     font-size: 17px;
     font-weight: 400;
@@ -85,7 +85,6 @@
 
     .weather-card-accordion-summary {
       padding: 0px;
-      margin: 0;
       display: flex;
       flex-direction: column;
 
@@ -142,6 +141,7 @@
       flex-direction: column;
       margin-top: 16px;
       mix-blend-mode: difference;
+      align-items: flex-end;
       filter: contrast(0.3);
 
       @media (max-width: 992px) {
